--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<version>3.8.1</version>
             <scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
 	</dependencies>
 
     <build>
